--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                         <!--/END Country Select Component -->
                                     </li>
                                     <li class="lang-select">
-                                        <a href="/" class="selected-text-item">EN</a>
+                                        <a href="/login.html" class="selected-text-item">LOGIN</a>
                                     </li>
 
                                 </ul>
@@ -191,19 +191,7 @@
 
                                 </div>
 
-                                <div class="menu-items-wrapper collapse" id="find-a-car">
-                                    <div class="car-item">
-                                        <a href="/en/find-a-car/overview">
-                                            <div class="car-item-desc">
-                                                <span class="car-title"><b>BOOK NOW!<b></b></b>
-                                                </span>
-                                            </div>
-                                            <div>
-                                                <img src="./img/01_200X112_featured_models_icon_F1.svg" alt=""
-                                                    width="200" height="112" DisableWebEdit="False" />
-                                            </div>
-                                        </a>
-                                    </div>
+                                <div class="menu-items-wrapper collapse" id="find-a-car">                                    
                                     <div class="car-item">
                                         <a href="/document/x50Details.pdf" target="_blank">
                                             <div class="car-item-desc">
@@ -287,7 +275,7 @@
                                 </div>
                                 <div class="menu-items-wrapper collapse" id="shopping-tools">                                   
                                     <div class="tool-item">
-                                        <a href="/en/shopping-tools/book-test-drive">
+                                        <a href="/BookingPage.html">
                                             <img src="/img/testdrive-icon.svg" alt="" width="80" height="85"
                                                 DisableWebEdit="False" />
                                             <span>Book Test Drive</span>
@@ -820,22 +808,8 @@
     <!-- SLICK CROUSEL --->
     <script src="./js/slick.min.js"></script>
 
-
-
-    <!-- Jquery Reel for 360 view --->
-    <script src="/assets/libs/js/reel/jquery.reel-min.js"></script>
-
-    <!-- Jquery Match height of Elements --->
-    <script src="/assets/libs/js/match-height-js/match-height.js"></script>
-
     <!-- Jquery Selectize for custom dropdowns --->
     <script src="./js/selectize.js"></script>
-
-    <!-- Jquery Validate for form validation --->
-    <script src="/assets/libs/js/jquery-validate/jquery.validate.js"></script>
-
-    <!-- Jquery Mask for Form Validation --->
-    <script src="/assets/libs/js/jquery-mask/jquery.mask.js"></script>
 
     <!--////////// END/ Libraries ////////////-->
     <!-- <script src="/assets/js/bundle.js"></script> -->
@@ -852,22 +826,6 @@
     <script src="/js/carousel.js"></script>
     <script src="/js/gallery-slider.js"></script>
     <script src="/js/video-banner.js"></script>
-    <script src="/assets/js/car-model.js"></script>
-    <script src="/assets/js/specs-accordion-slider.js"></script>
-    <script src="/assets/js/google-maps-api.js"></script>
-    <script src="/assets/js/loan-calculator.js"></script>
-    <script src="/assets/js/accordion.js"></script>
-    <script src="/assets/js/listing.js"></script>
-    <script src="/assets/js/tree.js"></script>
-    <script src="/assets/js/management.js"></script>
-    <script src="/assets/js/footer.js"></script>
-    <script src="/assets/js/forms.js"></script>
-    <script src="/assets/js/car-inquiry.js"></script>
-    <script src="/assets/js/back-to-top.js"></script>
-    <script src="/assets/js/service-accessories.js"></script>
-    <script src="/assets/js/tabs.js"></script>
-    <script src="/assets/js/car-inquiry.js"></script>
-    <script src="/assets/js/notifications-bar.js"></script>
     <!---    || path.ToLower().Contains("protonx70") || path.ToLower().Contains("copy-of-x70") -->
     <!-- Compiled free form custom js -->
     <!--////////// END/ Components Scripts ////////////-->
