--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                         <!--/END Country Select Component -->
                                     </li>
                                     <li class="lang-select">
-                                        <a href="/login.html" class="selected-text-item">LOGIN</a>
+                                        <a href="/" class="selected-text-item">EN</a>
                                     </li>
 
                                 </ul>
@@ -283,7 +283,7 @@
                                     </div>
                                     <div class="tool-item">
 
-                                        <a href="/CarPriceList.html">
+                                        <a href="/Admin_index.php">
                                             <img src="/img/carpricelist-icon.svg" alt="" width="80" height="85"
                                                 DisableWebEdit="False" />
                                             <span>Car Price List</span>
